# production-scheduler

./: .gitignore  MANUAL_MEMO_SHARING.md  README.md  TODO.md  build.ps1  package-lock.json  package.json
scripts/: check_field_types.js  check_kintone_fields.js  diagnose_app_506.js  diagnose_app_507.js  diagnose_permissions.js  setup_kintone.js  test_record_access.js  test_tokens.js
src/: app.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  build_log.txt  check_log.txt  tauri.admin.conf.json  tauri.conf.json
src-tauri/src/: commands.rs  commands_backup_methodB.rs  database.rs  kintone_client.rs  lib.rs  main.rs
