[package]
name = "production-scheduler"
version = "0.1.0"
description = "生産計画スケジューラー - kintone連携対応"
authors = ["JFE Production Team"]
edition = "2021"

[lib]
name = "production_scheduler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# デフォルトは管理者モード + kintone即時同期
default = ["admin-mode", "kintone-immediate-sync"]
# 管理者モード（全機能）
admin-mode = []
# 作業者モード（閲覧のみ）
worker-mode = []
# kintone即時同期（追加時にkintoneに即座に送信）
# このfeatureを無効にするとローカルのみ保存になります
kintone-immediate-sync = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# kintone API連携用（native-tls: Windows証明書ストア使用=企業プロキシ対応）
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }

# ローカルデータベース
rusqlite = { version = "0.32", features = ["bundled"] }

# 日時処理
chrono = { version = "0.4", features = ["serde"] }

# 非同期処理
futures = "0.3"

# エラーハンドリング
thiserror = "2"
anyhow = "1"

# ディレクトリ取得
dirs = "5"
